# api/storage/api-docs/api-docs.json
@@ -1410,7 +1410,7 @@
                 "tags": [
                     ""
                 ],
-                "description": "If an existing record can be located within target collection based on matching the input identifier, empty (null) target fields will be updated with Skeletal Data.\r\n\t\t\tIf the target field contains data, it will remain unaltered.\r\n\t\t\tIf multiple records are returned matching the input identifier, data will be added only to the first record.\r\n\t\t\tIf an identifier is not provided or a matching record can not be found, a new Skeletal record will be created and primed with input data.\r\n\t\t\tNote that catalogNumber or otherCatalogNumber must be provided to create a new skeletal record. If processingStatus is not defined, new skeletal records will be set as 'unprocessed'",
+                "description": "If an existing record can be located within target collection based on matching the input identifier, empty (null) target fields will be updated with Skeletal Data.\n\t\t\tIf the target field contains data, it will remain unaltered.\n\t\t\tIf multiple records are returned matching the input identifier, data will be added only to the first record.\n\t\t\tIf an identifier is not provided or a matching record can not be found, a new Skeletal record will be created and primed with input data.\n\t\t\tNote that catalogNumber or otherCatalogNumber must be provided to create a new skeletal record. If processingStatus is not defined, new skeletal records will be set as 'unprocessed'",
                 "operationId": "skeletalImport",
                 "parameters": [
                     {
@@ -1693,9 +1693,9 @@
         "/api/v2/taxonomy/{identifier}/description": {
             "get": {
                 "tags": [
-                    ""
+                    "Taxonomy"
                 ],
-                "operationId": "/api/v2/taxonomy/identifier/description",
+                "operationId": "getTaxonomyDescriptions",
                 "parameters": [
                     {
                         "name": "identifier",
@@ -1719,7 +1719,7 @@
                     {
                         "name": "offset",
                         "in": "query",
-                        "description": "Determines the starting point for the search results. A limit of 100 and offset of 200, will display 100 records starting the 200th record.",
+                        "description": "Determines the starting point for the search results.",
                         "required": false,
                         "schema": {
                             "type": "integer",
@@ -1737,7 +1737,48 @@
                         }
                     },
                     "400": {
-                        "description": "Error: Bad request. "
+                        "description": "Error: Bad request."
+                    }
+                }
+            }
+        },
+        "/api/v2/taxonomy/{identifier}/description/{description_id}": {
+            "get": {
+                "tags": [
+                    "Taxonomy"
+                ],
+                "operationId": "getSingleTaxonomyDescription",
+                "parameters": [
+                    {
+                        "name": "identifier",
+                        "in": "path",
+                        "description": "PK, GUID, or recordID associated with target taxonomic unit",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "description_id",
+                        "in": "path",
+                        "description": "Identifier (PK, tdbid) associated with taxonomic description",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Returns taxonomic description",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error: Bad request. Inventory identifier is required."
                     }
                 }
             }
